# FunctionalProgramming

./: README.md  index.html
.github/workflows/: cpp.yaml  markdown.yaml  qa.yaml  rust.yaml  task.yaml
assets/: index-DASDXnay.css  index-DDaZjkZ5.js  interpolator_bg-DphUOER3.wasm
lab-1/: README.md
lab-1-cpp/: .gitignore  CMakeLists.txt  README.md
lab-1-cpp/prob28/: CMakeLists.txt
lab-1-cpp/prob28/include/: prob28.hpp
lab-1-cpp/prob28/src/: prob28.cpp
lab-1-cpp/prob3/: CMakeLists.txt
lab-1-cpp/prob3/include/: prob3.hpp
lab-1-cpp/prob3/src/: prob3.cpp
lab-1-cpp/tests/: CMakeLists.txt  prob28.cpp  prob3.cpp
lab-1-rust/: README.md
lab-1/haskell/: .gitignore  labwork.cabal  package.yaml  stack.yaml
lab-1/haskell/src/: Prob25.hs  Prob5.hs
lab-1/haskell/test/: Spec.hs
lab-1/julia/: Project.toml
lab-1/julia/src/: Labwork.jl  prob25.jl  prob5.jl
lab-1/julia/test/: runtests.jl
lab-1/src/: main.rs  prob28.rs  prob3.rs
lab-2/: .gitignore  .markdownlint.json  Cargo.toml  README.md  package.yaml  stack.yaml
lab-2-btree/: Cargo.toml
lab-2-btree/src/: lib.rs
lab-2/app/: Main.hs
lab-2/src/: Avl.hs  AvlPrinter.hs  AvlSet.hs  iterator.rs  lib.rs  main.rs  memory.rs  node.rs  rb_tree.rs  tree.rs
lab-2/test/: Spec.hs
lab-3/: .gitignore  README.md  index.html  nodemon.json  package-lock.json  package.json  package.yaml  stack.yaml  tailwind.config.js  vite.config.ts
lab-3/app/: Main.hs
lab-3/src/: App.svelte  Lib.hs  main.ts
lab-3/src/Interp/: Algorithms.hs  Format.hs  Stream.hs  Types.hs
lab-3/src/Interp/Algorithms/: Lagrange.hs  Linear.hs  Newton.hs
lab-3/src/lib/: Graph.svelte  Modal.svelte  Parameters.svelte  Terminal.svelte  types.ts
lab-3/test/: Spec.hs
lab-3/wasm/: Cargo.toml
lab-3/wasm/src/: interpolator.rs  lib.rs  parser.rs
lab-3/wasm/src/interpolator/: lagrange.rs  linear.rs  newton.rs  rbf.rs
