cabal-version:       2.2

name:                labwork
version:             1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Armemius/FunctionalProgramming
author:              Armemius
maintainer:          a.stepanov@pawlin.ru
category:            Web
build-type:          Simple

executable labwork
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell
