[package]
name = "interpolator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
serde-json-wasm="1.0.1"
serde-wasm-bindgen="0.6.5"
